libpq-fe-v1.147.pas


{ close the current connection and free the PGconn data structure  }
procedure PQfinish(conn:PPGconn);cdecl;
{ get info about connection options known to PQconnectdb  }
function PQconndefaults:PPQconninfoOption;cdecl;
{ parse connection options in same way as PQconnectdb  }
(* Const before type ignored *)
function PQconninfoParse(conninfo:Pchar; errmsg:PPchar):PPQconninfoOption;cdecl;
{ free the data structure returned by PQconndefaults() or PQconninfoParse()  }
procedure PQconninfoFree(connOptions:PPQconninfoOption);cdecl;
{
 * close the current connection and restablish a new one with the same
 * parameters
  }
{ Asynchronous (non-blocking)  }
function PQresetStart(conn:PPGconn):longint;cdecl;
function PQresetPoll(conn:PPGconn):PostgresPollingStatusType;cdecl;
{ Synchronous (blocking)  }
procedure PQreset(conn:PPGconn);cdecl;
{ request a cancel structure  }
function PQgetCancel(conn:PPGconn):PPGcancel;cdecl;
{ free a cancel structure  }
procedure PQfreeCancel(cancel:PPGcancel);cdecl;
{ issue a cancel request  }
function PQcancel(cancel:PPGcancel; errbuf:Pchar; errbufsize:longint):longint;cdecl;
{ backwards compatible version of PQcancel; not thread-safe  }
function PQrequestCancel(conn:PPGconn):longint;cdecl;
{ Accessor functions for PGconn objects  }
(* Const before type ignored *)
function PQdb(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQuser(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQpass(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQhost(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQport(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQtty(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQoptions(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQstatus(conn:PPGconn):ConnStatusType;cdecl;
(* Const before type ignored *)
function PQtransactionStatus(conn:PPGconn):PGTransactionStatusType;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQparameterStatus(conn:PPGconn; paramName:Pchar):Pchar;cdecl;
(* Const before type ignored *)
function PQprotocolVersion(conn:PPGconn):longint;cdecl;
(* Const before type ignored *)
function PQserverVersion(conn:PPGconn):longint;cdecl;
(* Const before type ignored *)
function PQerrorMessage(conn:PPGconn):Pchar;cdecl;
(* Const before type ignored *)
function PQsocket(conn:PPGconn):longint;cdecl;
(* Const before type ignored *)
function PQbackendPID(conn:PPGconn):longint;cdecl;
(* Const before type ignored *)
function PQconnectionNeedsPassword(conn:PPGconn):longint;cdecl;
(* Const before type ignored *)
function PQconnectionUsedPassword(conn:PPGconn):longint;cdecl;
(* Const before type ignored *)
function PQclientEncoding(conn:PPGconn):longint;cdecl;
(* Const before type ignored *)
function PQsetClientEncoding(conn:PPGconn; encoding:Pchar):longint;cdecl;
{ Get the OpenSSL structure associated with a connection. Returns NULL for
 * unencrypted connections or if any other TLS library is in use.  }
function PQgetssl(conn:PPGconn):pointer;cdecl;
{ Tell libpq whether it needs to initialize OpenSSL  }
procedure PQinitSSL(do_init:longint);cdecl;
{ More detailed way to tell libpq whether it needs to initialize OpenSSL  }
procedure PQinitOpenSSL(do_ssl:longint; do_crypto:longint);cdecl;
{ Set verbosity for PQerrorMessage and PQresultErrorMessage  }
function PQsetErrorVerbosity(conn:PPGconn; verbosity:PGVerbosity):PGVerbosity;cdecl;
{ Enable/disable tracing  }
procedure PQtrace(conn:PPGconn; debug_port:PFILE);cdecl;
procedure PQuntrace(conn:PPGconn);cdecl;
{ Override default notice handling routines  }
function PQsetNoticeReceiver(conn:PPGconn; proc:PQnoticeReceiver; arg:pointer):PQnoticeReceiver;cdecl;
function PQsetNoticeProcessor(conn:PPGconn; proc:PQnoticeProcessor; arg:pointer):PQnoticeProcessor;cdecl;
{
 *	   Used to set callback that prevents concurrent access to
 *	   non-thread safe functions that libpq needs.
 *	   The default implementation uses a libpq internal mutex.
 *	   Only required for multithreaded apps that use kerberos
 *	   both within their app and for postgresql connections.
  }
type

  pgthreadlock_t = procedure (acquire:longint);cdecl;

function PQregisterThreadLock(newhandler:pgthreadlock_t):pgthreadlock_t;cdecl;
{ === in fe-exec.c ===  }
{ Simple synchronous query  }
(* Const before type ignored *)
function PQexec(conn:PPGconn; query:Pchar):PPGresult;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before declarator ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQexecParams(conn:PPGconn; command:Pchar; nParams:longint; paramTypes:POid; paramValues:PPchar; 
           paramLengths:Plongint; paramFormats:Plongint; resultFormat:longint):PPGresult;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQprepare(conn:PPGconn; stmtName:Pchar; query:Pchar; nParams:longint; paramTypes:POid):PPGresult;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before declarator ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQexecPrepared(conn:PPGconn; stmtName:Pchar; nParams:longint; paramValues:PPchar; paramLengths:Plongint; 
           paramFormats:Plongint; resultFormat:longint):PPGresult;cdecl;
{ Interface for multiple-result or asynchronous queries  }
(* Const before type ignored *)
function PQsendQuery(conn:PPGconn; query:Pchar):longint;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before declarator ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQsendQueryParams(conn:PPGconn; command:Pchar; nParams:longint; paramTypes:POid; paramValues:PPchar; 
           paramLengths:Plongint; paramFormats:Plongint; resultFormat:longint):longint;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQsendPrepare(conn:PPGconn; stmtName:Pchar; query:Pchar; nParams:longint; paramTypes:POid):longint;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before declarator ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQsendQueryPrepared(conn:PPGconn; stmtName:Pchar; nParams:longint; paramValues:PPchar; paramLengths:Plongint; 
           paramFormats:Plongint; resultFormat:longint):longint;cdecl;
function PQgetResult(conn:PPGconn):PPGresult;cdecl;
{ Routines for managing an asynchronous query  }
function PQisBusy(conn:PPGconn):longint;cdecl;
function PQconsumeInput(conn:PPGconn):longint;cdecl;
{ LISTEN/NOTIFY support  }
function PQnotifies(conn:PPGconn):PPGnotify;cdecl;
{ Routines for copy in/out  }
(* Const before type ignored *)
function PQputCopyData(conn:PPGconn; buffer:Pchar; nbytes:longint):longint;cdecl;
(* Const before type ignored *)
function PQputCopyEnd(conn:PPGconn; errormsg:Pchar):longint;cdecl;
function PQgetCopyData(conn:PPGconn; buffer:PPchar; async:longint):longint;cdecl;
{ Deprecated routines for copy in/out  }
function PQgetline(conn:PPGconn; _string:Pchar; length:longint):longint;cdecl;
(* Const before type ignored *)
function PQputline(conn:PPGconn; _string:Pchar):longint;cdecl;
function PQgetlineAsync(conn:PPGconn; buffer:Pchar; bufsize:longint):longint;cdecl;
(* Const before type ignored *)
function PQputnbytes(conn:PPGconn; buffer:Pchar; nbytes:longint):longint;cdecl;
function PQendcopy(conn:PPGconn):longint;cdecl;
{ Set blocking/nonblocking connection to the backend  }
function PQsetnonblocking(conn:PPGconn; arg:longint):longint;cdecl;
(* Const before type ignored *)
function PQisnonblocking(conn:PPGconn):longint;cdecl;
function PQisthreadsafe:longint;cdecl;
{ Force the write buffer to be written (or at least try)  }
function PQflush(conn:PPGconn):longint;cdecl;
{
 * "Fast path" interface --- not really recommended for application
 * use
  }
(* Const before type ignored *)
function PQfn(conn:PPGconn; fnid:longint; result_buf:Plongint; result_len:Plongint; result_is_int:longint; 
           args:PPQArgBlock; nargs:longint):PPGresult;cdecl;
{ Accessor functions for PGresult objects  }
(* Const before type ignored *)
function PQresultStatus(res:PPGresult):ExecStatusType;cdecl;
function PQresStatus(status:ExecStatusType):Pchar;cdecl;
(* Const before type ignored *)
function PQresultErrorMessage(res:PPGresult):Pchar;cdecl;
(* Const before type ignored *)
function PQresultErrorField(res:PPGresult; fieldcode:longint):Pchar;cdecl;
(* Const before type ignored *)
function PQntuples(res:PPGresult):longint;cdecl;
(* Const before type ignored *)
function PQnfields(res:PPGresult):longint;cdecl;
(* Const before type ignored *)
function PQbinaryTuples(res:PPGresult):longint;cdecl;
(* Const before type ignored *)
function PQfname(res:PPGresult; field_num:longint):Pchar;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
function PQfnumber(res:PPGresult; field_name:Pchar):longint;cdecl;
(* Const before type ignored *)
function PQftable(res:PPGresult; field_num:longint):Oid;cdecl;
(* Const before type ignored *)
function PQftablecol(res:PPGresult; field_num:longint):longint;cdecl;
(* Const before type ignored *)
function PQfformat(res:PPGresult; field_num:longint):longint;cdecl;
(* Const before type ignored *)
function PQftype(res:PPGresult; field_num:longint):Oid;cdecl;
(* Const before type ignored *)
function PQfsize(res:PPGresult; field_num:longint):longint;cdecl;
(* Const before type ignored *)
function PQfmod(res:PPGresult; field_num:longint):longint;cdecl;
function PQcmdStatus(res:PPGresult):Pchar;cdecl;
(* Const before type ignored *)
function PQoidStatus(res:PPGresult):Pchar;cdecl;
{ old and ugly  }
(* Const before type ignored *)
function PQoidValue(res:PPGresult):Oid;cdecl;
{ new and improved  }
function PQcmdTuples(res:PPGresult):Pchar;cdecl;
(* Const before type ignored *)
function PQgetvalue(res:PPGresult; tup_num:longint; field_num:longint):Pchar;cdecl;
(* Const before type ignored *)
function PQgetlength(res:PPGresult; tup_num:longint; field_num:longint):longint;cdecl;
(* Const before type ignored *)
function PQgetisnull(res:PPGresult; tup_num:longint; field_num:longint):longint;cdecl;
(* Const before type ignored *)
function PQnparams(res:PPGresult):longint;cdecl;
(* Const before type ignored *)
function PQparamtype(res:PPGresult; param_num:longint):Oid;cdecl;
{ Describe prepared statements and portals  }
(* Const before type ignored *)
function PQdescribePrepared(conn:PPGconn; stmt:Pchar):PPGresult;cdecl;
(* Const before type ignored *)
function PQdescribePortal(conn:PPGconn; portal:Pchar):PPGresult;cdecl;
(* Const before type ignored *)
function PQsendDescribePrepared(conn:PPGconn; stmt:Pchar):longint;cdecl;
(* Const before type ignored *)
function PQsendDescribePortal(conn:PPGconn; portal:Pchar):longint;cdecl;
{ Delete a PGresult  }
procedure PQclear(res:PPGresult);cdecl;
{ For freeing other alloc'd results, such as PGnotify structs  }
procedure PQfreemem(ptr:pointer);cdecl;
{ Exists for backward compatibility.  bjm 2003-03-24  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function PQfreeNotify(ptr : longint) : longint;

{ Error when no password was given.  }
{ Note: depending on this is deprecated; use PQconnectionNeedsPassword().  }
const
  PQnoPasswordSupplied = 'fe_sendauth: no password supplied\n';  
{ Create and manipulate PGresults  }
